[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/sprites/ui/options_background.png" type="Texture" id=1]
[ext_resource path="res://scripts/ui/Options.gd" type="Script" id=2]
[ext_resource path="res://scenes/ui/OptionsButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/ui/Slider.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/fonts/Game-Regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 5 )

[node name="OptionsLayer" type="CanvasLayer"]
pause_mode = 2
layer = 120
script = ExtResource( 2 )

[node name="Screen" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Screen"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.498039 )

[node name="Margin" type="MarginContainer" parent="Screen"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 380.0
margin_top = 200.0
margin_right = -380.0
margin_bottom = -200.0

[node name="Background" type="NinePatchRect" parent="Screen/Margin"]
margin_right = 1160.0
margin_bottom = 680.0
texture = ExtResource( 1 )
patch_margin_left = 175
patch_margin_top = 80
patch_margin_right = 175
patch_margin_bottom = 80

[node name="Margin" type="MarginContainer" parent="Screen/Margin/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 80.0
margin_top = 80.0
margin_right = -80.0
margin_bottom = -80.0

[node name="VBoxContainer" type="VBoxContainer" parent="Screen/Margin/Background/Margin"]
margin_right = 1000.0
margin_bottom = 520.0
custom_constants/separation = 30

[node name="Label" type="Label" parent="Screen/Margin/Background/Margin/VBoxContainer"]
margin_right = 1000.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Options"
align = 1

[node name="Padding" type="Control" parent="Screen/Margin/Background/Margin/VBoxContainer"]
visible = false
margin_top = 75.0
margin_right = 1000.0
margin_bottom = 75.0

[node name="MasterSlider" parent="Screen/Margin/Background/Margin/VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 90.0
margin_right = 1000.0
margin_bottom = 138.0

[node name="MusicSlider" parent="Screen/Margin/Background/Margin/VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 168.0
margin_right = 1000.0
margin_bottom = 216.0

[node name="SfxSlider" parent="Screen/Margin/Background/Margin/VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 246.0
margin_right = 1000.0
margin_bottom = 294.0

[node name="SpeedSlider" parent="Screen/Margin/Background/Margin/VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 324.0
margin_right = 1000.0
margin_bottom = 372.0

[node name="ResumeButton" parent="Screen" instance=ExtResource( 3 )]
margin_left = 455.0
margin_top = 680.0
margin_right = 985.0
margin_bottom = 836.0
size_flags_horizontal = 0
text = "resume"

[node name="RetryButton" parent="Screen" instance=ExtResource( 3 )]
margin_left = 455.0
margin_top = 680.0
margin_right = 985.0
margin_bottom = 836.0
size_flags_horizontal = 0
text = "retry"

[node name="MainMenuButton" parent="Screen" instance=ExtResource( 3 )]
margin_left = 925.0
margin_top = 680.0
margin_right = 1455.0
margin_bottom = 836.0
rect_pivot_offset = Vector2( 265, 82 )
size_flags_horizontal = 0
text = "title screen"

[node name="TutorialButton" parent="Screen" instance=ExtResource( 3 )]
margin_left = 925.0
margin_top = 680.0
margin_right = 1455.0
margin_bottom = 836.0
rect_pivot_offset = Vector2( 265, 82 )
size_flags_horizontal = 0
toggle_mode = true
